# trivia-cli

./: .gitignore  README.md  pyproject.toml
src/trivia/: __init__.py  main.py
src/trivia/utils/: questions.py
