[project]
name = "trivia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joshua Ruffolo", email = "joshua.ruffolo@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
trivia = "trivia:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
