[project]
name = "trivia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joshua Ruffolo", email = "joshua.ruffolo@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.5.4",
    "requests>=2.32.5",
]

[project.scripts]
trivia = "trivia.main:app"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
